Remove second title from showcase item body

--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -132,6 +132,10 @@
     }
 
     .markdown {
+      & > p:first-of-type {
+        text-align: center;
+      }
+
       h1 {
         color: $mainColor;
         padding-bottom: 5px;
