--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -8,7 +8,6 @@
   position: fixed;
   top: 0px;
   left: 0;
-  padding: 10px;
   width: 100vw;
 
   display: grid;
@@ -27,6 +26,7 @@
 
       max-width: 100%;
       text-decoration: none;
+      padding: 5px 0;
 
       &:hover {
         background-color: $darker;
